--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HiHomeSeller</string>
+    <string name="app_name">Seller</string>
     <string name="facebook_app_id">531680747547715</string>
     <string moduleConfig="true" name="CodePushDeploymentKey">IpAg2HEuKnsAOQRe4TeCrKju3biB1afxzA4Me</string>
 </resources>
