--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -25,6 +25,7 @@
   "login" : "تسجيل الدخول",
   "hello_welcome": "مرحبا بك!",
   "dont_have_account" : "لا تملك حساب ؟",
+
   "sign_up" :  "سجل",
   "first_name":  "الاسم الاول",
   "last_name":  "اللقب",
@@ -83,7 +84,6 @@
   "faq": " الأسئلة الشائعة & المتكررة",
   "sign_out":  "تسجيل الخروج",
   "confirm_logout":   " هل أنت متأكد أنك تريد تسجيل الخروج?",
-
   "account_settings":  " إعدادت الحساب",
 
   "categories":  " التصنيفات",
@@ -285,5 +285,6 @@
   "exist_feature_product_info": "This is your feature product. One featured product is mandatory. If you want to remove this product as featured, just add/edit another product and make it featured.",
   "inactive_feature_product_info": "This is your feature product. One featured product is mandatory. If you want to make this product out-of-stock, just edit another product and make it featured.",
   "delete_feature_product_info": "This is your feature product. One featured product is required to show your store to customer. If you want to delete this product, just change your featured product by edit/add. \n\n  Or you can delete this product anyway, but your store will get removed from customer application.",
-  "delete_anyway": "Delete Anyway!"
+  "delete_anyway": "Delete Anyway!",
+  "waiting_for_approval": "Waiting for approval"
 }
