--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -288,5 +288,6 @@
   "exist_feature_product_info": "This is your feature product. One featured product is mandatory. If you want to remove this product as featured, just add/edit another product and make it featured.",
   "inactive_feature_product_info": "This is your feature product. One featured product is mandatory. If you want to make this product out-of-stock, just edit another product and make it featured.",
   "delete_feature_product_info": "This is your feature product. One featured product is required to show your store to customer. If you want to delete this product, just change your featured product by edit/add. \n\n  Or you can delete this product anyway, but your store will get removed from customer application.",
-  "delete_anyway": "Delete Anyway!"
+  "delete_anyway": "Delete Anyway!",
+  "waiting_for_approval": "Waiting for approval"
 }
