--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -48,7 +48,7 @@
   "profile" : "الملف الشخصي",
   "email_login" :  "تسجيل الدخول عبر البريد الإلكتروني",
   "mobile_login" :  "تسجيل الدخول عن طريق رقم الهاتف المحمول",
-  "email_mobile_login" :  "تسجيل الدخول عبر البريد الإلكتروني او الهاتف المحمول",
+  "email_mobile_login" :  "تسجيل الدخول عبر البريد الإلكتروني",
   "facebook" :   "الفيسبوك",
   "google" :    "جوجل",
 
