Sign up valid emirates message

--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -295,4 +295,5 @@
   "pickup_time": "PickUp Time",
   "select_pickup_time_error": "Please select a pickup time. This will be the time when food will be ready for delivery.",
   "select_city": "Select City",
+  "invalid_emiractes_id": "Enter a valid Emirates ID",
 }
