Edit Profile, mobile side validation, email validation and phone numbers validation

--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -226,6 +226,7 @@
   "invalid_email_contact": "أدخل بريدًا إلكترونيًا صحيحًا للتواصل.",
   "invalid_mobile_number_contact": "أدخل رقم صحيح للهاتف المحمول للتواصل.",
   "invalid_business_email": "أدخل عنوان بريد إلكتروني صحيح .",
+  "invalid_business_phone": "أدخل رقم هاتف عمل صالحًا.",
   "account_under_review" : "لقد تم تسجيلك بنجاح. نحن حاليا نتحقق من صحة تفاصيل حسابك. بمجرد الموافقة ، ستتلقى إشعارًا بالموافقة ويمكنك تسجيل الدخول إلى حسابك.",
   "security_information": "حماية المعلومات",
   "change_password": "غير كلمة السر",
