Contact us - SAF-19

--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -293,4 +293,9 @@
   "pickup_time": "PickUp Time",
   "select_pickup_time_error": "Please select a pickup time. This will be the time when food will be ready for delivery.",
   "select_city": "اختر مدينة",
+
+  "call_us": "اتصل بنا",
+  "technical_support": "دعم فني",
+  "email_us": "ارسل لنا عبر البريد الإلكتروني",
+  "whatsapp": "واتس اب لنا",
 }
