--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -296,4 +296,9 @@
   "pickup_time": "PickUp Time",
   "select_pickup_time_error": "Please select a pickup time. This will be the time when food will be ready for delivery.",
   "select_city": "Select City",
+
+  "call_us": "Call Us",
+  "technical_support": "Technical Support",
+  "email_us": "Email Us",
+  "whatsapp": "Whatsapp Us",
 }
