Orders->Add order number, lang file

--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -298,4 +298,6 @@
   "technical_support": "دعم فني",
   "email_us": "ارسل لنا عبر البريد الإلكتروني",
   "whatsapp": "واتس اب لنا",
+
+  "order_number": "رقم الأمر :",
 }
