--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -301,4 +301,5 @@
   "technical_support": "Technical Support",
   "email_us": "Email Us",
   "whatsapp": "Whatsapp Us",
+  "order_number": "Order Number : ",
 }
