Product -> show confirmation alert on delete

--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -302,4 +302,5 @@
   "email_us": "Email Us",
   "whatsapp": "Whatsapp Us",
   "order_number": "Order Number : ",
+  "delete_alert_message": "Are you sure you want to delete?"
 }
