Arabic text for Server for

--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -307,6 +307,6 @@
 
   "special_request": "طلب خاص",
 
-  "add_serve_count": "يخدم ل",
+  "add_serve_count": "يكفي ل",
   "invalid_serve_count": "أدخل عددًا صالحًا للخدمة للمواد الغذائية",
 }
