--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -309,5 +309,5 @@
 
   "add_serve_count": "يكفي ل",
   "invalid_serve_count": "أدخل عددًا صالحًا للخدمة للمواد الغذائية",
-  "item_pickup": "The food item will be picked up between 8AM-11AM on : "
+  "item_pickup": "سيتم استلام الطعام بين الساعة ٨.٠٠ والساعة ١١.٠٠ صباحا : "
 }
