--- a/src/localizations/ar.json
+++ b/src/localizations/ar.json
@@ -22,6 +22,7 @@
   "confirm_password" : "تأكيد كلمة المرور",
   "mobile_number" : "رقم الهاتف",
   "forgot_password" : "نسيت كلمة السر؟",
+  "email_error": "الرجاء إدخال عنوان البريد الإلكتروني المسجل.",
   "login" : "تسجيل الدخول",
   "hello_welcome": "مرحبا بك!",
   "dont_have_account" : "لا تملك حساب ؟",
@@ -44,6 +45,8 @@
   "enter_confirm_password" : "تأكيد كلمة المرور",
   "password_mismatch":  " كلمة المرور غير صحيحه",
   "password_reset_success": "تم تحديث كلمة المرور",
+
+  "dashboard_heading":"لوحة القيادة",
 
   "profile" : "الملف الشخصي",
   "email_login" :  "تسجيل الدخول عبر البريد الإلكتروني",
@@ -105,7 +108,8 @@
   "edit": "تحرير",
   "upload_now":  " تحميل الآن",
   "enter_content_here":  " أدخل المحتوى هنا",
-  "recipes": "وصفات",
+  "add_description": "اضف وصفا",
+  "recipes":"وصفات",
   "ingredients": "المكونات",
   "minutes": "دقائق",
   "minute": "دقيقه",
