--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -22,6 +22,7 @@
   "confirm_password" : "Confirm Password",
   "mobile_number" : "Mobile Number",
   "forgot_password" : "Forgot Your Password ?",
+  "email_error": "Please enter registered email address.",
   "login" : "Login",
   "hello_welcome": "Hello! Welcome back!",
   "dont_have_account" : "Don't have an account ?",
@@ -44,6 +45,9 @@
   "enter_confirm_password" : "Please confirm your password",
   "password_mismatch": "New Password and Confirm Password doesn't match",
   "password_reset_success": "Your account password has been updated.",
+  
+  "dashboard_heading":"Dashboard",
+
 
   "profile" : "Profile",
   "email_login" : "Log in using email",
@@ -107,7 +111,8 @@
   "edit": "Edit",
   "upload_now": "Upload Now",
   "enter_content_here": "Enter content here",
-  "recipes": "Recipes",
+  "add_description": "Add description",
+  "recipes":"Recipes",
   "ingredients": "Ingredients",
   "minutes": "Minutes",
   "minute": "Minute",
@@ -275,7 +280,7 @@
   "today_orders": "Today Orders",
   "week_orders": "This Week Orders",
   "month_orders": "This Month Orders",
-  "year_orders": "This Year Orders",
+  "year_orders": "This Year Orders",   
   "today_earnings": "Today Earnings",
   "week_earnings": "This Week Earnings",
   "month_earnings": "This Month Earnings",
